Improve scale of R formula

--- a/docs/assets/widgets.css
+++ b/docs/assets/widgets.css
@@ -217,6 +217,13 @@
   color:gray;
 }
 
+.figtext3{
+  font-size:20px;
+  font-family:Helvetica;
+  text-align:left;
+  color:gray;
+}
+
 
 .annotatetext{
   font-size:12px;
