--- a/docs/assets/widgets.css
+++ b/docs/assets/widgets.css
@@ -212,7 +212,7 @@
 .figtext2{
   font-size:13px;
   line-height:18px;
-  font-family:Helvetica;
+  font-family:Open Sans;
   text-align:left;
   color:gray;
 }
@@ -246,9 +246,8 @@
   text-align:right;
 }
 
-.mycaptiontext{
+.caption{
   font-size:15px;
-  line-height:22px !important;
   font-family:Open Sans;
   text-align:right;
   color:gray;
